# Inkbytes-Settings

./: .gitignore  SysDictionary.py  pyproject.toml  requirements.txt
_install/: install.py
